manifest/frontend-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cfrontend-app
  labels:
    app: rapdev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rapdev
  template:
    metadata:
      labels:
        app: rapdev
    spec:
      containers:
        - name: cfrontend-app
          image: vinaysj/frontend-app
          ports:
            - containerPort: 5000
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
    labels:
        app: rapdev
    name: cfrontend-app
spec:
    ports:
        - name: cfrontend-app
          port: 5000
          targetPort: 5000
    selector:
        app: rapdev
    type: NodePort
