manifest/order-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-db
  labels:
    app: rapdev
#  namespace: rapdev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rapdev
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rapdev
    spec:
      containers:
        - name: order-db
          image: mysql:8
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: orderdb-vol
      restartPolicy: Always
      volumes:
        - name: orderdb-vol
          persistentVolumeClaim:
            claimName: orderdb-vol
---
apiVersion: v1
kind: Service
metadata:
#    namespace: rapdev
    labels:
        app: rapdev
    name: order-db
spec:
    ports:
        - name: order-db
          port: 32002
          targetPort: 3306
    selector:
        app: rapdev
    clusterIP: None
#    type: NodePort
