manifest/product-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-db
  labels:
    app: rapdev
#  namespace: rapdev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rapdev
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rapdev
    spec:
      containers:
        - name: product-db
          image: mysql:8
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: productdb-vol
      restartPolicy: Always
      volumes:
        - name: productdb-vol
          persistentVolumeClaim:
            claimName: productdb-vol
---
apiVersion: v1
kind: Service
metadata:
#    namespace: rapdev
    labels:
        app: rapdev
    name: product-db
spec:
    ports:
        - name: product-db
          port: 32001
          targetPort: 3306
    selector:
        app: rapdev
    clusterIP: None
#    type: NodePort
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: product-db
##  namespace: rapdev
#spec:
#  rules:
#    - http:
#        paths:
#          - path: /product
#            pathType: Prefix
#            backend:
#              service:
#                name: product-db
#                port:
#                  number: 8080
#status: {}
