manifest/order-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corder-service
  labels:
    app: rapdev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rapdev
  template:
    metadata:
      labels:
        app: rapdev
    spec:
      containers:
        - name: corder-service
          image: vinaysj/order-api
          ports:
            - containerPort: 5003
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
    labels:
        app: rapdev
    name: corder-service
spec:
    ports:
        - name: corder-service
          port: 5003
          targetPort: 5003
    selector:
        app: rapdev
    clusterIP: None
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: corder-service
spec:
  rules:
    - http:
        paths:
          - path: /api/order/
            pathType: Prefix
            backend:
              service:
                name: corder-service
                port:
                  number: 8080
status: {}
