manifest/user-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-db
  labels:
    app: rapdev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rapdev
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rapdev
    spec:
      containers:
        - name: user-db
          image: mysql:8
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: userdb-vol
      restartPolicy: Always
      volumes:
        - name: userdb-vol
          persistentVolumeClaim:
            claimName: userdb-vol
---
apiVersion: v1
kind: Service
metadata:
    labels:
        app: rapdev
    name: user-db
spec:
    ports:
        - name: user-db
          port: 32000
          targetPort: 3306
    selector:
        app: rapdev
    clusterIP: None
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-db
spec:
  rules:
    - http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-db
                port:
                  number: 8080
status: {}
